# Mqtt-Protocol

./: Cargo.toml  config.ini  mqtt_log.txt  mqtt_log_2025-08-25.txt  mqtt_log_2025-08-28.txt  mqtt_log_2025-08-29.txt
src/: main.rs
src/utils/: db.rs  estagio.rs  logger.rs  mod.rs  mqtt.rs  udp.rs  vini.rs
